simplify Database design and add input field validation. resolves #5